--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Learning Typescript by making a Blockchain with it",
   "main": "index.js",
+  "repository": "https://github.com/hjkimGithub/typecoin.git",
+  "author": "hjkim",
   "license": "MIT",
-  "dependencies": {
-    "typescript": "^4.5.4"
+  "scripts": {
+    "start": "node index.js",
+    "prestart": "tsc"
   }
 }
